config/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: $name
spec:
  ports:
  - port: 7001
    targetPort: 7001
    protocol: TCP
  selector:
    run: $name
  type: NodePort
