config/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: $name
spec:
  rules:
  - host: react-starter.192.168.99.100.nip.io
    http:
      paths:
      - backend:
          serviceName: $name
          servicePort: 7001
        path: /
